# linpb

./: .clang-format  .gitignore  CMakeLists.txt  InputFormats.md  LICENSE  README.md
cmake/: soplex_CMakeLists.txt.in  soplex_Settings_Overwrite.cmake  soplex_build_and_load.cmake
cmake/Modules/: FindGMP.cmake
src/: Constr.cpp  Constr.hpp  ConstrExp.cpp  ConstrExp.hpp  ConstrSimple.cpp  ConstrSimple.hpp  IntSet.hpp  Logger.hpp  LpSolver.cpp  LpSolver.hpp  Options.hpp  Solver.cpp  Solver.hpp  SolverStructs.cpp  SolverStructs.hpp  Stats.hpp  aux.hpp  globals.hpp  main.cpp  parsing.cpp  parsing.hpp  quit.cpp  quit.hpp  roundingsat.cpp  roundingsat.h  run.cpp  run.hpp  typedefs.hpp
src/gaussian/: gaussian.cpp  gaussian.h  gqueuedata.h  packedrow.cpp  packedrow.h  propby.h  solvertypes.h  solverwrapper.cpp  solverwrapper.h  toplevelgauss.cpp  vardata.h
test/: run_tests.sh
test/instances/cnf/: ec-rand4regsplit-v030-n1.cnf
test/instances/opb/dec/: 128ebits_0.opb  128ebits_any.opb  21array_alg_ineq7.opb  22array_alg_ineq7.opb  256ebits_0.opb  256ebits_any.opb  32array_alg_ineq5.opb  air01.0.s.opb  air01.0.u.opb  air02.0.s.opb  air02.0.u.opb  air06.0.s.opb  air06.0.u.opb  bm23.0.s.opb  bm23.0.u.opb  cracpb1.0.s.opb  cracpb1.0.u.opb  diamond.0.d.opb  lp4l.0.s.opb  lp4l.0.u.opb  p0040.0.s.opb  p0040.0.u.opb  p0291.0.s.opb  p0291.0.u.opb  pipex.0.s.opb  pipex.0.u.opb  sentoy.0.s.opb  sentoy.0.u.opb  stein15.0.s.opb  stein15.0.u.opb  stein9.0.s.opb  stein9.0.u.opb
test/instances/opb/opt/: air04.opb  air05.opb  diamond.opb  l152lav.opb  lp4l.opb  mod008.opb  mod010.opb  normalized-single-obj-f47-DC-Side1.seq-B-2-1-EDCBAir.opb  p0033.opb  p0040.opb  p0201.opb  p0282.opb  p0291.opb  p0548.opb  p2756.opb  p6000.opb  sentoy.opb  stein15.opb  stein27.opb  stein45.opb  stein9.opb
test/instances/wcnf/: driverlog01bc.wcsp.dir.wcnf
